fixed the overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,10 +13,9 @@
 }
 
 body {
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
   overflow: hidden;
-
   background-color: var(--primary-color);
   color: var(--secondary-color);
   font-weight: 400;
