--- a/app/styles/mystack.module.css
+++ b/app/styles/mystack.module.css
@@ -1,3 +1,8 @@
+.my_stack_parent_container {
+  position: relative;
+  overflow: hidden;
+}
+
 .heading {
   padding: 2.3rem 1.85rem;
   font-size: 1.25rem;
